--- a/src/main/resources/META-INF/ymp-default-conf.properties
+++ b/src/main/resources/META-INF/ymp-default-conf.properties
@@ -2,7 +2,7 @@
 ymp.module_list=cache
 
 # \u6846\u67B6\u6A21\u5757\u5B9A\u4E49\uFF0C\u5FC5\u987B\u4EE5ymp.modules\u5B57\u7B26\u4E32\u5F00\u59CB\uFF0C\u540E\u8DDF\u6A21\u5757\u540D\u79F0\uFF0C\u4EE5\u82F1\u6587\u53E5\u70B9\u5206\u9694
-ymp.modules.cache=net.ymate.platform.module.cache.Caches
+ymp.modules.cache=net.ymate.platform.module.cache.CachesModule
 
 # \u7F13\u5B58\u6570\u636E\u76D1\u542C\u5668\u63A5\u53E3\u5B9E\u73B0\u7C7B\uFF0C\u82E5\u672A\u63D0\u4F9B\u5219\u9ED8\u8BA4\u4E0D\u542F\u7528\u76D1\u542C
 ymp.configs.cache.event_listener_impl=
